--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Checkm8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Ultimate AI Chatbot">
     <link rel="icon" type="image/png" href="imgs/logo.png">
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="main.js"></script>
@@ -19,9 +20,9 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a onclick="linkScroll(100)">How It Works</a></li>
-                        <li><a onclick="linkScroll(200)">Pricing</a></li>
-                        <li><a onclick="linkScroll(300)">Free Trial</a></li>
+                        <li><a href="#" onclick="linkScroll(100)">How It Works</a></li>
+                        <li><a href="#" onclick="linkScroll(200)">Pricing</a></li>
+                        <li><a href="#" onclick="linkScroll(300)">Free Trial</a></li>
                     </ul> 
                 </nav>
             </header>
