Finished carousel for now

--- a/index.html
+++ b/index.html
@@ -46,22 +46,25 @@
             <img src="imgs/arrow_mini_left.png" alt="arrow_mini_left" class="navigation left"></img>
             <div class="carousel">
                 <div class="carousel-titles">
-                    <h2 style="top: 0">Introduction</h2>
-                    <h2 style="top: 100%">Technology Overview</h2>
-                    <h2 style="top: -100%">User Interaction</h2>
+                    <h2 style="top: 0"><p class="blink">[</p>Introduction<p class="blink">]</p></h2>
+                    <h2 style="top: 100%"><p class="blink">[</p>Technology Overview<p class="blink">]</p></h2>
+                    <h2 style="top: -100%"><p class="blink">[</p>User Interaction<p class="blink">]</p></h2>
                 </div>
                 <div class="carousel-contents">
                     <div style="left: 0">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam maxime commodi vitae consectetur quis, sint laborum consequuntur, aliquid vel nulla dolore ex nobis molestias rem dolores repudiandae similique, at magni expedita earum tempore tenetur odio blanditiis! Ipsum nisi aliquid, reprehenderit, aliquam sit eligendi dolore eos a unde, aspernatur magnam cupiditate.</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, nemo! Officiis culpa provident neque assumenda? Minus, dolores ullam. Illum ab ex vel nostrum non rerum officiis fugiat soluta totam minima.</p>
+                        <p >Welcome to the dawn of a new era in digital companionship! Checkm8 represents years of research aimed at creating an intuitive and personalized experience for users worldwide. Unlike anything you've encountered before, our chatbot seamlessly integrates into your online interactions. With advanced algorithms and natural language processing capabilities, this companion enhances your digital experience in ways you never thought possible.</p>
+                        <p>As the creators of this groundbreaking technology, we invite you to join us on a journey into the world of conversational AI. Prepare to be amazed by the adaptability and responsiveness of our AI chatbot, as it learns and evolves with each interaction. Let's explore the endless possibilities of this transformative technology and discover how it's reshaping the future of digital communication.</p>
+                        <img src="imgs/carousel_icon_1.png">
                     </div>
                     <div style="left: 100%">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, odit? Laudantium, facere aspernatur. Obcaecati, aut? Quod ut mollitia eligendi nihil enim commodi rem est accusamus voluptates eum! Labore aspernatur quae blanditiis quo reiciendis, incidunt voluptates eum iusto sint ab dolores, animi officia fugit soluta beatae rerum! Maiores autem nemo earum!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quaerat possimus inventore rem deleniti non iste quibusdam praesentium sed dolorem esse nulla, pariatur, tenetur illo natus quod eos perspiciatis maiores!</p>
+                        <p>Behind the scenes of Checkm8 lies a powerful technology stack built upon the latest advancements in artificial intelligence. From sophisticated machine learning algorithms to advanced neural networks, every aspect of its architecture is designed to deliver exceptional performance and reliability. By continuously analyzing vast amounts of data, our chatbot learns and evolves, ensuring that its responses are always accurate and relevant.</p>
+                        <p>What truly sets our AI chat companion apart is its ability to adapt and grow in real-time. Through advanced natural language understanding, it can decipher user intent and context, enabling more meaningful and productive interactions. As creators, we are excited to share the inner workings of our technology with the world and revolutionize the way we communicate.</p>
+                        <img src="imgs/carousel_icon_2.png">
                     </div>
                     <div style="left: -100%">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi architecto quidem aut, placeat ratione, quaerat sunt velit necessitatibus recusandae voluptate perspiciatis atque omnis consectetur illo voluptatum provident facere vel, suscipit dignissimos! Quas, esse nulla molestiae incidunt earum non quis blanditiis animi, itaque illum laudantium quidem exercitationem!</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, ullam rem explicabo quod voluptate ipsam natus quibusdam ipsa dolores quaerat nisi, laudantium doloremque nostrum impedit. Est qui neque ad earum!</p>
+                        <p >One of the hallmarks of Checkm8 is its unparalleled ability to engage users in meaningful and dynamic conversations. Unlike traditional chatbots that rely on scripted responses, it leverages advanced dialogue management techniques to provide a seamless and natural interaction experience. Whether you're seeking information, assistance, or simply a friendly chat, our chatbot is always ready to lend a helping hand.</p>
+                        <p>Gone are the days of frustrating chatbot experiences characterized by rigid scripts and limited functionality. With our AI companion, users can enjoy personalized interactions that adapt to their unique needs and preferences. As creators, we take pride in the user-centric design of our chatbot, ensuring that every interaction leaves users feeling heard, understood, and supported.</p>
+                        <img src="imgs/carousel_icon_3.png">
                     </div>
                 </div>
             </div>
