Pricing, responsibility for desktop, refresh fix

--- a/index.html
+++ b/index.html
@@ -77,6 +77,86 @@
         </section>
         <section>
             <i>Pricing</i>
+            <table>
+                <tr>
+                  <th>Version</th>
+                  <th>Basic</th>
+                  <th>Pro</th>
+                  <th>Enterprise</th>
+                </tr>
+                <tr>
+                  <td>Price</td>
+                  <td>$49/month</td>
+                  <td>$99/month</td>
+                  <td>$299/month</td>
+                </tr>
+                <tr>
+                    <td>[0] Interactions</td>
+                    <td>1000</td>
+                    <td>10000</td>
+                    <td>Unlimited</td>
+                  </tr>
+                <tr>
+                  <td>[1] Basic functionality</td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[2] Natural language processing</td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[3] Sentiment analysis</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[4] Customization options</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[5] Advanced algorithms</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[6] CRM and marketing integration</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[7] Custom behavior and workflows</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[8] Priority support</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                  <td>[9] Security and compliance</td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/cross.png"></td>
+                  <td><img src="imgs/checkmark.png"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><button>Subscribe</button></td>
+                    <td><button>Subscribe</button></td>
+                    <td><button>Subscribe</button></td>
+                  </tr>
+            </table>
             <b>02</b>
         </section>
         <section>
