--- a/index.html
+++ b/index.html
@@ -13,16 +13,11 @@
         <section>
             <video src="home.webm" autoplay muted loop></video>
             <header>
-                <div id="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <nav>
                     <ul>
-                        <li><a href="#" onclick="linkScroll(100)">How It Works</a></li>
-                        <li><a href="#" onclick="linkScroll(200)">Pricing</a></li>
-                        <li><a href="#" onclick="linkScroll(300)">Free Trial</a></li>
+                        <li><a href="#" onclick="linkScroll(100)">[01] How It Works</a></li>
+                        <li><a href="#" onclick="linkScroll(200)">[02] Pricing</a></li>
+                        <li><a href="#" onclick="linkScroll(300)">[03] Free Trial</a></li>
                     </ul> 
                 </nav>
             </header>
@@ -54,17 +49,17 @@
                     <div style="left: 0">
                         <p >Welcome to the dawn of a new era in digital companionship! Checkm8 represents years of research aimed at creating an intuitive and personalized experience for users worldwide. Unlike anything you've encountered before, our chatbot seamlessly integrates into your online interactions. With advanced algorithms and natural language processing capabilities, this companion enhances your digital experience in ways you never thought possible.</p>
                         <p>As the creators of this groundbreaking technology, we invite you to join us on a journey into the world of conversational AI. Prepare to be amazed by the adaptability and responsiveness of our AI chatbot, as it learns and evolves with each interaction. Let's explore the endless possibilities of this transformative technology and discover how it's reshaping the future of digital communication.</p>
-                        <img src="imgs/carousel_icon_1.png">
+                        <img src="imgs/carousel_icon_1.png" alt="carousel_icon_1">
                     </div>
                     <div style="left: 100%">
                         <p>Behind the scenes of Checkm8 lies a powerful technology stack built upon the latest advancements in artificial intelligence. From sophisticated machine learning algorithms to advanced neural networks, every aspect of its architecture is designed to deliver exceptional performance and reliability. By continuously analyzing vast amounts of data, our chatbot learns and evolves, ensuring that its responses are always accurate and relevant.</p>
                         <p>What truly sets our AI chat companion apart is its ability to adapt and grow in real-time. Through advanced natural language understanding, it can decipher user intent and context, enabling more meaningful and productive interactions. As creators, we are excited to share the inner workings of our technology with the world and revolutionize the way we communicate.</p>
-                        <img src="imgs/carousel_icon_2.png">
+                        <img src="imgs/carousel_icon_2.png" alt="carousel_icon_2">
                     </div>
                     <div style="left: -100%">
                         <p >One of the hallmarks of Checkm8 is its unparalleled ability to engage users in meaningful and dynamic conversations. Unlike traditional chatbots that rely on scripted responses, it leverages advanced dialogue management techniques to provide a seamless and natural interaction experience. Whether you're seeking information, assistance, or simply a friendly chat, our chatbot is always ready to lend a helping hand.</p>
                         <p>Gone are the days of frustrating chatbot experiences characterized by rigid scripts and limited functionality. With our AI companion, users can enjoy personalized interactions that adapt to their unique needs and preferences. As creators, we take pride in the user-centric design of our chatbot, ensuring that every interaction leaves users feeling heard, understood, and supported.</p>
-                        <img src="imgs/carousel_icon_3.png">
+                        <img src="imgs/carousel_icon_3.png" alt="carousel_icon_3">
                     </div>
                 </div>
             </div>
@@ -98,57 +93,57 @@
                   </tr>
                 <tr>
                   <td>[1] Basic functionality</td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[2] Natural language processing</td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[3] Sentiment analysis</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[4] Customization options</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[5] Advanced algorithms</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[6] CRM and marketing integration</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[7] Custom behavior and workflows</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[8] Priority support</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                   <td>[9] Security and compliance</td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/cross.png"></td>
-                  <td><img src="imgs/checkmark.png"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/cross.png" alt="cross"></td>
+                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                     <td></td>
