--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <header>
                 <nav>
                     <ul>
-                        <li><a href="#" onclick="linkScroll(100)">[01] How It Works</a></li>
-                        <li><a href="#" onclick="linkScroll(200)">[02] Pricing</a></li>
-                        <li><a href="#" onclick="linkScroll(300)">[03] Free Trial</a></li>
+                        <li><a href="#" onclick="linkScroll(100)">> How It Works</a></li>
+                        <li><a href="#" onclick="linkScroll(200)">> Pricing</a></li>
+                        <li><a href="#" onclick="linkScroll(300)">> Get Started</a></li>
                     </ul> 
                 </nav>
             </header>
@@ -72,6 +72,7 @@
         </section>
         <section>
             <i>Pricing</i>
+            <b>02</b>
             <table>
                 <tr>
                   <th>Version</th>
@@ -147,16 +148,39 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><button>Subscribe</button></td>
-                    <td><button>Subscribe</button></td>
-                    <td><button>Subscribe</button></td>
+                    <td><button onclick="linkScroll(300)">Subscribe</button></td>
+                    <td><button onclick="linkScroll(300)">Subscribe</button></td>
+                    <td><button onclick="linkScroll(300)">Subscribe</button></td>
                   </tr>
             </table>
-            <b>02</b>
         </section>
         <section>
-            <i>Free Trial</i>
+            <i>Get Started</i>
             <b>03</b>
+            <h2>Begin working with Checkm8</h2>
+            <form action="#">
+              <label for="firstName" class="short">First Name</label>
+              <label for="lastName" class="short">Last Name</label>
+              <input type="text" id="firstName" name="firstName" class="short">
+              <input type="text" id="lastName" name="lastName" class="short">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email">
+              <label for="confirmEmail">Confirm Email</label>
+              <input type="email" id="confirmEmail" name="confirmEmail">
+              <label for="subscriptionLevel">Subscription level</label>
+              <select name="subscriptionLevel" id="subscriptionLevel">
+                <option value="basic">Basic ($49/month)</option>
+                <option value="pro">Pro ($99/month)</option>
+                <option value="enterprise">Enterprise ($299/month)</option>
+              </select>
+              <label for="cardNumber">Card Number</label>
+              <input type="number" id="cardNumber" name="cardNumber">
+              <label for="expiration" class="short">Expiration (mm/yy)</label>
+              <label for="securityCode" class="short">Security Code</label>
+              <input type="text" id="expiration" name="expiration" class="short">
+              <input type="number" id="securityCode" name="securityCode" class="short">
+              <input type="submit" value="Subscribe">
+            </form>
         </section>
     </div>
     <img src="imgs/arrow.png" alt="arrow" class="return"></img>
