--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <table>
                 <tr>
                   <th>Version</th>
-                  <th>Basic</th>
-                  <th>Pro</th>
-                  <th>Enterprise</th>
+                  <th><img src="imgs/basic_light.png" alt="basic_icon">Basic<img src="imgs/basic_light.png" alt="basic_icon"></th>
+                  <th><img src="imgs/pro_light.png" alt="pro_icon">Pro<img src="imgs/pro_light.png" alt="pro_icon"></th>
+                  <th><img src="imgs/enterprise_light.png" alt="enterprise_icon">Enterprise<img src="imgs/enterprise_light.png" alt="enterprise_icon"></th>
                 </tr>
                 <tr>
                   <td>Price</td>
@@ -91,7 +91,7 @@
                     <td>1000</td>
                     <td>10000</td>
                     <td>Unlimited</td>
-                  </tr>
+                </tr>
                 <tr>
                   <td>[1] Basic functionality</td>
                   <td><img src="imgs/checkmark.png" alt="checkmark"></td>
@@ -151,22 +151,22 @@
                     <td><button onclick="linkScroll(300)">Subscribe</button></td>
                     <td><button onclick="linkScroll(300)">Subscribe</button></td>
                     <td><button onclick="linkScroll(300)">Subscribe</button></td>
-                  </tr>
+                </tr>
             </table>
         </section>
         <section>
             <i>Get Started</i>
             <b>03</b>
-            <h2>Begin working with Checkm8</h2>
-            <form action="#">
+            <h2>_Begin working with Checkm8_</h2>
+            <form>
               <label for="firstName" class="short">First Name</label>
               <label for="lastName" class="short">Last Name</label>
-              <input type="text" id="firstName" name="firstName" class="short">
-              <input type="text" id="lastName" name="lastName" class="short">
+              <input type="text" id="firstName" name="firstName" class="short" required>
+              <input type="text" id="lastName" name="lastName" class="short" required>
               <label for="email">Email</label>
-              <input type="email" id="email" name="email">
+              <input type="email" id="email" name="email" required>
               <label for="confirmEmail">Confirm Email</label>
-              <input type="email" id="confirmEmail" name="confirmEmail">
+              <input type="email" id="confirmEmail" name="confirmEmail" required>
               <label for="subscriptionLevel">Subscription level</label>
               <select name="subscriptionLevel" id="subscriptionLevel">
                 <option value="basic">Basic ($49/month)</option>
@@ -174,11 +174,11 @@
                 <option value="enterprise">Enterprise ($299/month)</option>
               </select>
               <label for="cardNumber">Card Number</label>
-              <input type="number" id="cardNumber" name="cardNumber">
+              <input type="number" id="cardNumber" name="cardNumber" required>
               <label for="expiration" class="short">Expiration (mm/yy)</label>
               <label for="securityCode" class="short">Security Code</label>
-              <input type="text" id="expiration" name="expiration" class="short">
-              <input type="number" id="securityCode" name="securityCode" class="short">
+              <input type="text" id="expiration" name="expiration" class="short" required>
+              <input type="number" id="securityCode" name="securityCode" class="short" required>
               <input type="submit" value="Subscribe">
             </form>
         </section>
