--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="sectionBox">
         <section>
-            <video src="home.webm" autoplay muted loop></video>
+            <video src="home.mp4" autoplay muted loop></video>
             <header>
                 <nav>
                     <ul>
