--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="sectionBox">
         <section>
-            <video src="home.mp4" autoplay muted loop></video>
+            <video src="home.mp4" type="video/mp4" autoplay muted loop></video>
             <header>
                 <nav>
                     <ul>
@@ -75,16 +75,16 @@
             <b>02</b>
             <table>
                 <tr>
-                  <th>Version</th>
-                  <th><img src="imgs/basic_light.png" alt="basic_icon">Basic<img src="imgs/basic_light.png" alt="basic_icon"></th>
-                  <th><img src="imgs/pro_light.png" alt="pro_icon">Pro<img src="imgs/pro_light.png" alt="pro_icon"></th>
-                  <th><img src="imgs/enterprise_light.png" alt="enterprise_icon">Enterprise<img src="imgs/enterprise_light.png" alt="enterprise_icon"></th>
+                    <th>Version</th>
+                    <th><img src="imgs/basic_light.png" alt="basic_icon">Basic<img src="imgs/basic_light.png" alt="basic_icon"></th>
+                    <th><img src="imgs/pro_light.png" alt="pro_icon">Pro<img src="imgs/pro_light.png" alt="pro_icon"></th>
+                    <th><img src="imgs/enterprise_light.png" alt="enterprise_icon">Enterprise<img src="imgs/enterprise_light.png" alt="enterprise_icon"></th>
                 </tr>
                 <tr>
-                  <td>Price</td>
-                  <td>$49/month</td>
-                  <td>$99/month</td>
-                  <td>$299/month</td>
+                    <td>Price</td>
+                    <td>$49/month</td>
+                    <td>$99/month</td>
+                    <td>$299/month</td>
                 </tr>
                 <tr>
                     <td>[0] Interactions</td>
@@ -93,58 +93,58 @@
                     <td>Unlimited</td>
                 </tr>
                 <tr>
-                  <td>[1] Basic functionality</td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[1] Basic functionality</td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[2] Natural language processing</td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[2] Natural language processing</td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[3] Sentiment analysis</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[3] Sentiment analysis</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[4] Customization options</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[4] Customization options</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[5] Advanced algorithms</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[5] Advanced algorithms</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[6] CRM and marketing integration</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[6] CRM and marketing integration</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[7] Custom behavior and workflows</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[7] Custom behavior and workflows</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[8] Priority support</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[8] Priority support</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                  <td>[9] Security and compliance</td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/cross.png" alt="cross"></td>
-                  <td><img src="imgs/checkmark.png" alt="checkmark"></td>
+                    <td>[9] Security and compliance</td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/cross.png" alt="cross"></td>
+                    <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
                     <td></td>
@@ -159,30 +159,30 @@
             <b>03</b>
             <img src="imgs/form_img_1.png" alt="form_img_1">
             <span>
-              <h2>Begin working with Checkm8</h2>
-              <form>
-                <label for="firstName" class="short">First Name</label>
-                <label for="lastName" class="short">Last Name</label>
-                <input type="text" id="firstName" name="firstName" class="short" required>
-                <input type="text" id="lastName" name="lastName" class="short" required>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <label for="confirmEmail">Confirm Email</label>
-                <input type="email" id="confirmEmail" name="confirmEmail" required>
-                <label for="subscriptionLevel">Subscription level</label>
-                <select name="subscriptionLevel" id="subscriptionLevel">
-                  <option value="basic">Basic ($49/month)</option>
-                  <option value="pro">Pro ($99/month)</option>
-                  <option value="enterprise">Enterprise ($299/month)</option>
-                </select>
-                <label for="cardNumber">Card Number</label>
-                <input type="number" id="cardNumber" name="cardNumber" required>
-                <label for="expiration" class="short">Expiration (mm/yy)</label>
-                <label for="securityCode" class="short">Security Code</label>
-                <input type="text" id="expiration" name="expiration" class="short" required>
-                <input type="number" id="securityCode" name="securityCode" class="short" required>
-                <input type="submit" value="Subscribe">
-              </form>
+                <h2>Begin working with Checkm8</h2>
+                <form>
+                    <label for="firstName" class="short">First Name</label>
+                    <label for="lastName" class="short">Last Name</label>
+                    <input type="text" id="firstName" name="firstName" class="short" required>
+                    <input type="text" id="lastName" name="lastName" class="short" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="confirmEmail">Confirm Email</label>
+                    <input type="email" id="confirmEmail" name="confirmEmail" required>
+                    <label for="subscriptionLevel">Subscription level</label>
+                    <select name="subscriptionLevel" id="subscriptionLevel">
+                        <option value="basic">Basic ($49/month)</option>
+                        <option value="pro">Pro ($99/month)</option>
+                        <option value="enterprise">Enterprise ($299/month)</option>
+                    </select>
+                    <label for="cardNumber">Card Number</label>
+                    <input type="number" id="cardNumber" name="cardNumber" required>
+                    <label for="expiration" class="short">Expiration (mm/yy)</label>
+                    <label for="securityCode" class="short">Security Code</label>
+                    <input type="text" id="expiration" name="expiration" class="short" required>
+                    <input type="number" id="securityCode" name="securityCode" class="short" required>
+                    <input type="submit" value="Subscribe">
+                </form>
             </span>
             <img src="imgs/form_img_2.png" alt="form_img_2">
         </section>
