Massive mobile UI update

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 </div>
                 <div class="carousel-contents">
                     <div style="left: 0">
-                        <p >Welcome to the dawn of a new era in digital companionship! Checkm8 represents years of research aimed at creating an intuitive and personalized experience for users worldwide. Unlike anything you've encountered before, our chatbot seamlessly integrates into your online interactions. With advanced algorithms and natural language processing capabilities, this companion enhances your digital experience in ways you never thought possible.</p>
-                        <p>As the creators of this groundbreaking technology, we invite you to join us on a journey into the world of conversational AI. Prepare to be amazed by the adaptability and responsiveness of our AI chatbot, as it learns and evolves with each interaction. Let's explore the endless possibilities of this transformative technology and discover how it's reshaping the future of digital communication.</p>
+                        <p>Welcome to the dawn of a new era in digital companionship! Checkm8 represents years of research aimed at creating an intuitive and personalized experience for users worldwide. Unlike anything you've encountered before, our chatbot seamlessly integrates into your online interactions. With advanced algorithms and natural language processing capabilities, this companion enhances your digital experience in ways you never thought possible.</p>
                         <img src="imgs/carousel_icon_1.png" alt="carousel_icon_1">
+                        <p>As the creators of this groundbreaking technology, we invite you to join us on a journey into the world of conversational AI. Prepare to be amazed by the adaptability and responsiveness of our AI chatbot, as it learns and evolves with each interaction. Let's explore the endless possibilities of this transformative technology and discover how it's reshaping the future of digital communication.</p>
                     </div>
                     <div style="left: 100%">
                         <p>Behind the scenes of Checkm8 lies a powerful technology stack built upon the latest advancements in artificial intelligence. From sophisticated machine learning algorithms to advanced neural networks, every aspect of its architecture is designed to deliver exceptional performance and reliability. By continuously analyzing vast amounts of data, our chatbot learns and evolves, ensuring that its responses are always accurate and relevant.</p>
-                        <p>What truly sets our AI chat companion apart is its ability to adapt and grow in real-time. Through advanced natural language understanding, it can decipher user intent and context, enabling more meaningful and productive interactions. As creators, we are excited to share the inner workings of our technology with the world and revolutionize the way we communicate.</p>
                         <img src="imgs/carousel_icon_2.png" alt="carousel_icon_2">
+                        <p>What truly sets our AI chat companion apart is its ability to adapt and grow in real-time. Through advanced natural language understanding, it can decipher user intent and context, enabling more meaningful and productive interactions. As creators, we are excited to share the inner workings of our technology with the world and revolutionize the way we communicate.</p>
                     </div>
                     <div style="left: -100%">
-                        <p >One of the hallmarks of Checkm8 is its unparalleled ability to engage users in meaningful and dynamic conversations. Unlike traditional chatbots that rely on scripted responses, it leverages advanced dialogue management techniques to provide a seamless and natural interaction experience. Whether you're seeking information, assistance, or simply a friendly chat, our chatbot is always ready to lend a helping hand.</p>
-                        <p>Gone are the days of frustrating chatbot experiences characterized by rigid scripts and limited functionality. With our AI companion, users can enjoy personalized interactions that adapt to their unique needs and preferences. As creators, we take pride in the user-centric design of our chatbot, ensuring that every interaction leaves users feeling heard, understood, and supported.</p>
+                        <p>One of the hallmarks of Checkm8 is its unparalleled ability to engage users in meaningful and dynamic conversations. Unlike traditional chatbots that rely on scripted responses, it leverages advanced dialogue management techniques to provide a seamless and natural interaction experience. Whether you're seeking information, assistance, or simply a friendly chat, our chatbot is always ready to lend a helping hand.</p>
                         <img src="imgs/carousel_icon_3.png" alt="carousel_icon_3">
+                        <p>Gone are the days of frustrating chatbot experiences characterized by rigid scripts and limited functionality. With our AI companion, users can enjoy personalized interactions that adapt to their unique needs and preferences. As creators, we take pride in the user-centric design of our chatbot, ensuring that every interaction leaves users feeling heard, understood, and supported.</p>
                     </div>
                 </div>
             </div>
@@ -78,70 +78,70 @@
                     <th>Version</th>
                     <th><img src="imgs/basic_light.png" alt="basic_icon">Basic<img src="imgs/basic_light.png" alt="basic_icon"></th>
                     <th><img src="imgs/pro_light.png" alt="pro_icon">Pro<img src="imgs/pro_light.png" alt="pro_icon"></th>
-                    <th><img src="imgs/enterprise_light.png" alt="enterprise_icon">Enterprise<img src="imgs/enterprise_light.png" alt="enterprise_icon"></th>
+                    <th><img src="imgs/expert_light.png" alt="expert_icon">Expert<img src="imgs/expert_light.png" alt="expert_icon"></th>
                 </tr>
                 <tr>
                     <td>Price</td>
-                    <td>$49/month</td>
-                    <td>$99/month</td>
-                    <td>$299/month</td>
+                    <td>$49<span class="desktop">/month</span></td>
+                    <td>$99<span class="desktop">/month</span></td>
+                    <td>$299<span class="desktop">/month</span></td>
                 </tr>
                 <tr>
-                    <td>[0] Interactions</td>
+                    <td><span class="desktop">[0]</span> Interactions</td>
                     <td>1000</td>
                     <td>10000</td>
                     <td>Unlimited</td>
                 </tr>
                 <tr>
-                    <td>[1] Basic functionality</td>
+                    <td><span class="desktop">[1]</span> Basic functionality</td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[2] Natural language processing</td>
+                    <td><span class="desktop">[2]</span> Language processing</td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[3] Sentiment analysis</td>
+                    <td><span class="desktop">[3]</span> Sentiment analysis</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[4] Customization options</td>
+                    <td><span class="desktop">[4]</span> Customization options</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[5] Advanced algorithms</td>
+                    <td><span class="desktop">[5]</span> Advanced algorithms</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[6] CRM and marketing integration</td>
+                    <td><span class="desktop">[6]</span> Marketing integration</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[7] Custom behavior and workflows</td>
+                    <td><span class="desktop">[7]</span> Custom workflows</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[8] Priority support</td>
+                    <td><span class="desktop">[8]</span> Priority support</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
                 </tr>
                 <tr>
-                    <td>[9] Security and compliance</td>
+                    <td><span class="desktop">[9]</span> Advanced security</td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/cross.png" alt="cross"></td>
                     <td><img src="imgs/checkmark.png" alt="checkmark"></td>
@@ -150,7 +150,7 @@
                     <td></td>
                     <td><button onclick="linkScroll(300); selectOption('basic')">Subscribe</button></td>
                     <td><button onclick="linkScroll(300); selectOption('pro')">Subscribe</button></td>
-                    <td><button onclick="linkScroll(300); selectOption('enterprise')">Subscribe</button></td>
+                    <td><button onclick="linkScroll(300); selectOption('expert')">Subscribe</button></td>
                 </tr>
             </table>
         </section>
@@ -160,6 +160,7 @@
             <img src="imgs/form_img_1.png" alt="form_img_1">
             <span>
                 <h2>Begin working with Checkm8</h2>
+                <hr>
                 <form>
                     <label for="firstName" class="short">First Name</label>
                     <label for="lastName" class="short">Last Name</label>
@@ -173,7 +174,7 @@
                     <select name="subscriptionLevel" id="subscriptionLevel">
                         <option value="basic">Basic ($49/month)</option>
                         <option value="pro">Pro ($99/month)</option>
-                        <option value="enterprise">Enterprise ($299/month)</option>
+                        <option value="expert">Expert ($299/month)</option>
                     </select>
                     <label for="cardNumber">Card Number</label>
                     <input type="number" id="cardNumber" name="cardNumber" required>
